--- a/inventory.yaml
+++ b/inventory.yaml
@@ -4,8 +4,8 @@ all:
       ansible_host: 192.168.58.10
     dhcp:
       ansible_host: 192.168.58.20
-    cliente:
-      ansible_host: client.example.test
+    client:
+      ansible_host: 192.168.58.100
 
   vars:
     ansible_user: vagrant
